# jina-embedding-server

./: README.md  pyproject.toml  server.py
